# prc-Editor-rustGUI

./: package.json  preload.js
.github/workflows/: build.yml  rust.yml  zigbuild.yml
prc-editor-rust/: Cargo.toml  ParamLabels.csv  README.md
prc-editor-rust/.cargo/: config.toml
prc-editor-rust/.github/workflows/: build.yml  simple-build.yml  zigbuild.yml
prc-editor-rust/src/: hash_labels.rs  main.rs  param_file.rs  param_types.rs  ui.rs
prcEditor/: log.txt  package-lock.json  prcEditor.sln
