[package]
name = "prc-editor-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies that work on both desktop and Switch
serde = { version = "1.0", features = ["derive"] }
csv = "1.3"
anyhow = "1.0"
byteorder = "1.5"
thiserror = "1.0"
indexmap = { version = "2.0", features = ["serde"] }

# Desktop-only dependencies (disabled for Switch builds)
[target.'cfg(not(target_os = "horizon"))'.dependencies]
egui = "0.28"
eframe = { version = "0.28", default-features = false, features = ["default_fonts", "glow", "persistence"] }
rfd = "0.14"
dirs = "5.0"

# Switch-specific dependencies
[target.'cfg(target_os = "horizon")'.dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }

[profile.release]
opt-level = 2
strip = true 